tests/ui/pattern/usefulness/match-arm-statics-2.stderr
error[E0004]: non-exhaustive patterns: `(true, false)` not covered
  --> $DIR/match-arm-statics-2.rs:17:11
   |
LL |     match (true, false) {
   |           ^^^^^^^^^^^^^ pattern `(true, false)` not covered
LL |
LL |         TRUE_TRUE => (),
   |         --------- this pattern doesn't introduce a new catch-all binding, but rather pattern matches against the value of constant `TRUE_TRUE`
   |
   = note: the matched value is of type `(bool, bool)`
note: constant `TRUE_TRUE` defined here
  --> $DIR/match-arm-statics-2.rs:14:1
   |
LL | const TRUE_TRUE: (bool, bool) = (true, true);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: if you meant to introduce a binding, use a different name
   |
LL |         TRUE_TRUE_var => (),
   |                  ++++
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         (false, true) => (),
LL +         (true, false) => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
